camcoffeesoc-site/src/routes/styles.scss
.centered-container {
    flex-wrap: wrap;
    display: flex;
    justify-content: center;
    align-items: center;
}

.socials-bar {
    display: flex;
    align-self: center;
    align-items: center;
    justify-content: center;
}

.horizontally-centered-container {
    display: flex;
    justify-content: center;
}
.footer-container {
    display: flex;
    justify-content: center;
    background-color: antiquewhite;

    .page-footer {
        text-align: center;
    }
}

.text, .list {
    padding: 2em;
}

.big-image {
    width: 100%
}

.nav-bar {
    white-space: normal;
}

body, html {
    width: 99vw;
    margin: 0;
    padding: 0;
    border: 0;
}

